--- a/src/Components/Projects.css
+++ b/src/Components/Projects.css
@@ -1,4 +1,40 @@
 .container{
     border-top: 1px solid black;
-    height: 500px;
+    width: 100vw;
+    padding: 5% 0%;
+}
+h1 {
+    text-align: center;
+}
+@media(min-width:900px){
+    .project_container{
+    display: grid;
+    grid-template-columns : 30% 30% 30%;
+    grid-column-gap: 4% ;
+    padding: 3%;
+    text-align: center;
+}
+}
+
+.project_container>div{
+    border: 1px solid black;
+    padding-bottom: 5%;
+}
+
+
+.project_image>img{
+    width: 90%;
+}
+
+@media (max-width:900px){
+    .project_container{
+        display: grid;
+        grid-template-rows: auto auto auto;
+        grid-row-gap: 3%;
+        text-align: center;
+    }
+    .project_container>div{
+        width: 80%;
+        margin: auto;
+    }
 }
