--- a/src/Components/Projects.css
+++ b/src/Components/Projects.css
@@ -1,10 +1,15 @@
 .container{
-    border-top: 1px solid black;
+    /* border-top: 1px solid black; */
     width: 100vw;
-    padding: 5% 0%;
+    padding-top: 10%;
+    background-color: #1E2022;
+    padding-bottom: 10%;
+  font-family: 'Noto Sans Mono', monospace;
+
 }
 h1 {
     text-align: center;
+    color: #F0F5F9;
 }
 @media(min-width:900px){
     .project_container{
@@ -17,8 +22,9 @@ h1 {
 }
 
 .project_container>div{
-    border: 1px solid black;
+    /* border: 1px solid black; */
     padding-bottom: 5%;
+    background-color: #F0F5F9;
 }
 
 
@@ -30,11 +36,31 @@ h1 {
     .project_container{
         display: grid;
         grid-template-rows: auto auto auto;
-        grid-row-gap: 3%;
+        grid-row-gap: 40px;
         text-align: center;
+        padding: 10% 0%;
     }
     .project_container>div{
         width: 80%;
         margin: auto;
     }
+}
+
+.icons>img{
+    cursor: pointer;
+}
+
+.icons>img:hover{
+    transform:scale(1.5) rotate(360deg);
+    transition: all 0.5s;
+}
+
+.project_box{
+    box-shadow: 5px 0px 15px 0px #F04308 ;
+    /* box-shadow: 5px 0px 20px 0px #EBEBEB ; */
+    border: 1px solid #C9D6DF;
+}
+
+.project_box:hover{
+    transform: scale(1.1);
 }
