--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,9 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+::-webkit-scrollbar {
+    display: none;
+}
 
 .App-header {
   background-color: #282c34;
