--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -1,18 +1,26 @@
 .Navbar_container {
-  border: 1px solid black;
+  /* border: 1px solid black; */
   width: 100vw;
   height: 40px;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   position: fixed;
+  background-color:#1E2022;
+  color : #F0F5F9;
+  font-family: 'Noto Sans Mono', monospace;
 }
 
 .Navbar_container > div:hover {
   transform: scale(1.2);
   transition: 0.2s;
 }
+.Navbar_container>div{
+    cursor: pointer;
+}
 
 .active{
-  color: red;
+  color: #F04308;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@300&display=swap');
