--- a/src/Components/SocialLinks.css
+++ b/src/Components/SocialLinks.css
@@ -5,11 +5,21 @@
     /* border: 1px solid black; */
     flex-direction: column;
     align-items: center;
-    height:80vh;
+    /* height:80vh; */
     justify-content:center;
     background-color:#1E2022;
     color : #F0F5F9;
     font-family: 'Noto Sans Mono', monospace;
+}
+@media(min-width:900px){
+    .data{
+        height:80vh;
+    }
+}
+@media(max-width:900px){
+.data{
+    height:100vh;
+}
 }
 .data,.links_container,.links_image{
     display: flex;
