--- a/src/Components/SocialLinks.css
+++ b/src/Components/SocialLinks.css
@@ -1,63 +1,56 @@
-
-.data{
-    padding:5%;
-    text-align: center;
-    /* border: 1px solid black; */
-    flex-direction: column;
-    align-items: center;
-    /* height:80vh; */
-    justify-content:center;
-    background-color:#1E2022;
-    color : #F0F5F9;
-    font-family: 'Noto Sans Mono', monospace;
+.data {
+  padding: 5%;
+  text-align: center;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #1e2022;
+  color: #f0f5f9;
+  font-family: "Noto Sans Mono", monospace;
 }
-@media(min-width:900px){
-    .data{
-        height:80vh;
-    }
-}
-@media(max-width:900px){
-.data{
-    height:100vh;
-}
-}
-.data,.links_container,.links_image{
-    display: flex;
-}
-.links_container{
-    /* border: 1px solid black; */
-    margin-top: 4%;
-    justify-content: space-evenly;
-}
-.links_image{
-    /* border: 1px solid black; */
-    width: 30%;
-    justify-content: space-evenly;
-}
-.links_image>img{
-    padding: 0% 5%;
-    cursor: pointer;
-}
-.links_image>img:hover{
-    transform:scale(1.5) rotate(360deg);
-    transition: all 0.5s;
+@media (min-width: 900px) {
+  .data {
+    height: 80vh;
+  }
+  .home_title {
+    font-size: 4rem;
+  }
+  .home_text {
+    font-size: 1.7em;
+  }
 }
 
-@media (max-width:900px){
-    .home_title{
-        font-size: 2em;
-    }
-    .home_text{
-        font-size: 1em;
-    }
+@media (max-width: 900px) {
+  .data {
+    height: 100vh;
+  }
+  .home_title {
+    font-size: 2em;
+  }
+  .home_text {
+    font-size: 1em;
+  }
 }
-
-@media (min-width:900px){
-    .home_title{
-        font-size: 4rem;
-    }
-    .home_text{
-        font-size: 1.7em;
-    }
+.data,
+.links_container,
+.links_image {
+  display: flex;
 }
-
+.links_container,
+.links_image {
+  justify-content: space-evenly;
+}
+.links_container {
+  margin-top: 4%;
+}
+.links_image {
+  width: 30%;
+}
+.links_image > img {
+  padding: 0% 5%;
+  cursor: pointer;
+}
+.links_image > img:hover {
+  transform: scale(1.8) rotate(360deg);
+  transition: all 0.5s;
+}
