--- a/src/Components/Projects.css
+++ b/src/Components/Projects.css
@@ -1,66 +1,61 @@
-.container{
-    /* border-top: 1px solid black; */
-    width: 100vw;
-    padding-top: 10%;
-    background-color: #1E2022;
-    padding-bottom: 10%;
-  font-family: 'Noto Sans Mono', monospace;
-
+.container {
+  width: 100vw;
+  padding-top: 10%;
+  background-color: #1e2022;
+  padding-bottom: 10%;
+  font-family: "Noto Sans Mono", monospace;
 }
 h1 {
-    text-align: center;
-    color: #F0F5F9;
+  text-align: center;
+  color: #f0f5f9;
 }
-@media(min-width:900px){
-    .project_container{
-    display: grid;
-    grid-template-columns : 30% 30% 30%;
-    grid-column-gap: 4% ;
+@media (min-width: 900px) {
+  .project_container {
+    grid-template-columns: 30% 30% 30%;
+    grid-column-gap: 4%;
     padding: 3%;
-    text-align: center;
-}
-}
-
-.project_container>div{
-    /* border: 1px solid black; */
-    padding-bottom: 5%;
-    background-color: #F0F5F9;
+  }
 }
 
-
-.project_image>img{
-    width: 90%;
+.project_container {
+  display: grid;
+  text-align: center;
+}
+.project_container > div {
+  padding-bottom: 5%;
+  background-color: #f0f5f9;
 }
 
-@media (max-width:900px){
-    .project_container{
-        display: grid;
-        grid-template-rows: auto auto auto;
-        grid-row-gap: 40px;
-        text-align: center;
-        padding: 10% 0%;
-    }
-    .project_container>div{
-        width: 80%;
-        margin: auto;
-    }
+.project_image > img {
+  width: 90%;
 }
 
-.icons>img{
-    cursor: pointer;
+@media (max-width: 900px) {
+  .project_container {
+    grid-template-rows: auto auto auto;
+    grid-row-gap: 40px;
+    padding: 10% 0%;
+  }
+  .project_container > div {
+    width: 80%;
+    margin: auto;
+  }
 }
 
-.icons>img:hover{
-    transform:scale(1.5) rotate(360deg);
-    transition: all 0.5s;
+.icons > img {
+  cursor: pointer;
 }
 
-.project_box{
-    box-shadow: 5px 0px 15px 0px #F04308 ;
-    /* box-shadow: 5px 0px 20px 0px #EBEBEB ; */
-    border: 1px solid #C9D6DF;
+.icons > img:hover {
+  transform: scale(1.8) rotate(360deg);
+  transition: all 0.5s;
 }
 
-.project_box:hover{
-    transform: scale(1.1);
+.project_box {
+  box-shadow: 5px 0px 15px 0px #f04308;
+  border: 1px solid #c9d6df;
+}
+
+.project_box:hover {
+  transform: scale(1.1);
 }
