--- a/src/Components/Skills.css
+++ b/src/Components/Skills.css
@@ -2,28 +2,26 @@
   /* border: 1px solid black; */
   margin-bottom: 20px;
   height: 5vh;
-  background-color: #C9D6DF;
-  font-family: 'Noto Sans Mono', monospace;
-
+  background-color: #c9d6df;
+  font-family: "Noto Sans Mono", monospace;
 }
 
-@media (min-width:900px) {
-  .percentage{
+@media (min-width: 900px) {
+  .percentage {
     width: 40vw;
   }
-  .percentage div>div{
+  .percentage div > div {
     width: 15vw;
   }
 }
 
-@media(max-width:900px){
-  .percentage{
+@media (max-width: 900px) {
+  .percentage {
     width: 50vw;
   }
-  .percentage div>div{
+  .percentage div > div {
     width: 26vw;
   }
-  
 }
 
 .percentage > div {
@@ -31,15 +29,12 @@
   height: 100%;
 }
 
-
 .percentage div > div {
   /* border: 1px solid black; */
   height: 5vh;
-  background-color: #1E2022;
+  background-color: #1e2022;
   /* position: absolute; */
   display: flex;
   align-items: center;
   padding-left: 2%;
 }
-
-
